DEVEX-2458 added changes to staging

--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -11,7 +11,7 @@
         <p>{{'IEO platform for transformative projects' | translate}}</p>
       </div>
       <div class="button-wr">
-        <a href="https://forms.gle/Y18qX3Na3WmWiRnw9" class="standart-btn" target="blank"><span>{{'Apply project to X-Platform' | translate}}</span></a>
+        <a href="https://forms.gle/Y18qX3Na3WmWiRnw9" class="standart-btn" target="blank"><span>{{'Apply to launch IEO to X-Platform' | translate}}</span></a>
       </div>
     </div>
   </div>
@@ -43,7 +43,7 @@
             </svg>
           </div>
           <div class="description-wr">
-            <p>{{'Notify me about upcoming projects in telegram chanel' | translate}}</p>
+            <p>{{'Notify me about upcoming projects through Telegram' | translate}}</p>
           </div>
         </div>
         <div class="link-wr">
@@ -115,7 +115,7 @@
             </div>
           </div>
           <div class="button-wr">
-            <button class="standart-btn reverse" (click)="subEmailNotification()"><span>{{'Get email notification' | translate}}</span>
+            <button class="standart-btn reverse" (click)="subEmailNotification()"><span>{{'Get email notifications' | translate}}</span>
             </button>
           </div>
         </form>
@@ -147,7 +147,7 @@
               </svg>
             </div>
             <div class="description-wr">
-              <p>{{'Notify me about upcoming projects in telegram chanel' | translate}}  </p>
+              <p>{{'Notify me about upcoming projects through Telegram' | translate}}  </p>
             </div>
           </div>
           <div class="bottom-part">
@@ -223,7 +223,7 @@
                 </div>
                 <div class="button-wr">
                   <button class="standart-btn reverse" (click)="subEmailNotification()">
-                    <span>{{'Get email notification' | translate}}</span>
+                    <span>{{'Get email notifications' | translate}}</span>
                   </button>
                 </div>
               </form>
@@ -335,7 +335,7 @@
             <h4>{{'Verify account' | translate}}</h4>
           </div>
           <div class="h-w-description">
-            <p>{{'Only verified accounts can participate in IEO. You need to pass verification only once.' | translate}}</p>
+            <p>{{'Only verified accounts can participate in IEO. Verification is needed only once.' | translate}}</p>
           </div>
         </div>
         <div class="how-work-item">
@@ -343,10 +343,10 @@
             <img src="assets/img/ieo/how-work2.svg" alt="">
           </div>
           <div class="h-w-title">
-            <h4>{{'Buy coins in IEO' | translate}}</h4>
+            <h4>{{'Buy coins during IEO' | translate}}</h4>
           </div>
           <div class="h-w-description">
-            <p>{{'IEO starts in a specific time ' | translate}}<br>{{'and can end any time after coins are sold.' | translate}}</p>
+            <p>{{'IEO starts in a specific time ' | translate}}<br>{{'and ends right after all coins are sold.' | translate}}</p>
           </div>
         </div>
         <div class="how-work-item">
@@ -357,7 +357,7 @@
             <h4>{{'Hold or trade' | translate}}</h4>
           </div>
           <div class="h-w-description">
-            <p>{{'After successful finishing of IEO coins are delivered to your balance.' | translate}}</p>
+            <p>{{'IEO tokens will appear in your account right after the event is successfully concluded.' | translate}}</p>
           </div>
         </div>
 
@@ -372,13 +372,13 @@
         </div>
         <ul class="s-list">
           <li class="s-item">
-            <span>{{'In case of unsuccessful IEO all funds will be backed to all participants automatically.' | translate}}</span>
+            <span>{{'In case of an unsuccessful IEO, all funds are returned to all participants automatically.' | translate}}</span>
           </li>
           <li class="s-item">
-            <span>{{'In case of successful IEO coin will listed on Exchange as soon as ' | translate}}</span>
+            <span>{{'In case of a successful IEO coin will listed on exchange.' | translate}}</span>
           </li>
           <li class="s-item">
-            <span>{{'Please, remember that all risks are on your side.' | translate}}</span>
+            <span>{{'Please make sure you are aware of all risk involved.' | translate}}</span>
           </li>
 
         </ul>
@@ -388,15 +388,16 @@
           <h5>{{'Additional information' | translate}}</h5>
         </div>
         <div class="a-block-item">
-          <a>{{'What are demands to Projects that want to have IEO?' | translate}}</a>
+          <a>{{'What are the demands to Projects that want to conduct an IEO?' | translate}}</a>
         </div>
         <div class="a-block-item">
-          <a>{{'Why IEO is considered more safe than ICO?' | translate}}</a>
+          <a>{{'Why IEO is considered safer than ICO?' | translate}}</a>
         </div>
 
       </div>
       <div class="warning-block">
-        <p>{{'Awareness: Please remember that crypto is high risky investments. Of course we do all best to filter projects but all responsibility is still on your side.' | translate}}</p>
+        <p>{{'Awareness: Please remember that cryptocurrencies are high-risk investments.
+            Of course we do all our best to filter all projects but all responsibilities rest at your side.' | translate}}</p>
       </div>
     </div>
   </div>
