updated error messages

--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -300,6 +300,7 @@
       <div class="trading-notification__title">
         {{showLimit(createdOrder?.baseType, true)}} {{createdOrder?.orderType}} {{' Order not created!' | translate}}
       </div>
+      <p *ngFor="let message of errorMessages"> {{message}}</p>
       <!-- <p> {{'Status:' | translate}} {{message}}</p> -->
       <!--<p>Submitted exchange limit sell order for 9 ZRX by using BTC</p>-->
     </div>
