--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -161,7 +161,7 @@
 
     <div class="send__line"></div>
 
-    <ng-container *ngIf="cryptoInfoByName.maxDailyRequestSum > 0">
+    <ng-container *ngIf="cryptoInfoByName.leftRequestSum > 0">
       <div class="send__info">
         <div class="send__info-row">
           <div class="send__info-title">{{'You want to withdraw:' | translate}}</div>
@@ -202,7 +202,7 @@
         <span> {{currName}}</span>
       </button>
     </ng-container>
-    <ng-container *ngIf="cryptoInfoByName.maxDailyRequestSum == 0">
+    <ng-container *ngIf="cryptoInfoByName.leftRequestSum == 0">
       <div class="withdraw-limit-error">
         {{'Your daily output limit for this currency has been exceeded. Please try again tomorrow.' | translate}}
       </div>
