--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -78,10 +78,8 @@
 </ng-template>
 
 <ng-template #prediction let-index>
-    <!-- <app-chat (changeItemSize)="changeItemSize($event)"
-              (removeItem)="removeItem(index)">
-    </app-chat> -->
-    <app-prediction > </app-prediction>
+    <app-prediction></app-prediction>
+  </ng-template>
 
 <ng-template #orders let-index>
   <app-embedded-orders (changeItemSize)="changeItemSize($event)"
