hidden ambassador links

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -112,13 +112,13 @@
             </ng-container>
           </li>
 
-          <li class="menu__item" routerLinkActive="menu__link--active">
+          <!-- <li class="menu__item" routerLinkActive="menu__link--active">
             <ng-container>
                <a class="menu__link" href="https://about.exrates.me/become-ambassador" >
                  <span class="menu__link-text">{{'Ambassador Program' | translate}}</span>
                </a>
             </ng-container>
-          </li>
+          </li> -->
 
           <!-- <li class="menu__item" routerLinkActive="menu__link--active">
             <ng-container>
@@ -409,9 +409,9 @@
           class="menu-mob__link-text">{{'Fiat' | translate}}</span>
         </a>
 
-        <a class="menu-mob__link" href="https://about.exrates.me/become-ambassador"><span
+        <!-- <a class="menu-mob__link" href="https://about.exrates.me/become-ambassador"><span
           class="menu-mob__link-text">{{'Ambassador Program' | translate}}</span>
-        </a>
+        </a> -->
 
         <a class="menu-mob__link" href="https://about.exrates.me/form-listing" ><span
           class="menu-mob__link-text">{{'Apply to list' | translate}}</span>
