DEVEX-2483 fixed text and url

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -59,7 +59,7 @@
           <a href="https://support.exrates.me/article/fees-pairs" target="blank"><span>Fees</span></a>
         </div>
         <div class="info-page-item">
-          <a href="https://ex-open-api.firebaseapp.com/" target="blank"><span>API</span></a>
+          <a href="https://developer.exrates.me/" target="blank"><span>API</span></a>
         </div>
       </div>
       <div class="inside-page-wr">
