--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -11,7 +11,7 @@
         <p>{{'IEO platform for transformative projects' | translate}}</p>
       </div>
       <div class="button-wr">
-        <a href="https://forms.gle/Y18qX3Na3WmWiRnw9" class="standart-btn" target="blank"><span>{{'Apply to launch IEO to X-Platform' | translate}}</span></a>
+        <a href="https://forms.gle/Y18qX3Na3WmWiRnw9" class="standart-btn" target="blank"><span>{{'Apply to launch IEO on X-Platform' | translate}}</span></a>
       </div>
     </div>
   </div>
