--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,17 @@
 
+.tech-banner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: black;
+  color: white;
+  z-index: 1000;
+  text-align: center;
+  font-size: 50px;
+  padding-top: 300px;
+}
+body{
+  overflow: hidden;
+}
