--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="page-wrap" [ngClass]="{'dark-theme': isCurrentThemeDark()}">
+<div class="page-wrap" [ngClass]="{'dark-theme': isCurrentThemeDark()}"  *ngIf="!technicalWorks">
 
   <!--<h3>{{'built: 27.10.2018 10:17:12' }}</h3>-->
   <!-- <a href="https://t.me/exrates_official" target="_blank" class="banner-wrap" id="banner">
@@ -117,4 +117,9 @@
   </div>
 </div>
 <app-footer></app-footer>
+</div>
+
+
+<div class="tech-banner" *ngIf="technicalWorks">
+  TECHNICAL WORKS
 </div>
