--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,17 +1,13 @@
 
 .tech-banner {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: black;
-  color: white;
-  z-index: 1000;
-  text-align: center;
-  font-size: 50px;
-  padding-top: 300px;
-}
-body{
+  width: 100%;
+  font-size: 20px;
+  background-color: #262151;
+  font-family: Roboto;
+  font-weight: 500;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 1.8em;
   overflow: hidden;
+  position: relative;
 }
