update license number

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -82,7 +82,7 @@
         </div>
         <div class="adrr-txt">
           <h4>Official European Union License</h4>
-          <p>DexTechnologies OÜ is registered in Estonia and operates under official license. Company ID 23342340-234</p>
+          <p>DexTechnologies OÜ is registered in Estonia and operates under official license. Company ID 14499374</p>
         </div>
       </div>
     </div>
