updated KYC verification

--- a/src/app/popups/kyc-popup/kyc-level1-step-one/kyc-level1-step-one.component.html
+++ b/src/app/popups/kyc-popup/kyc-level1-step-one/kyc-level1-step-one.component.html
@@ -1,7 +1,7 @@
 
 <div class="title title-id modal__title">{{'Identity Verification' | translate}}</div>
 <div class="subtitle subtitle-id modal__subtitle">
-  <p>{{'The information you fill in must be co consistent with the information in ID documents.' | translate}}</p>
+  <p>The information you fill in must be co consistent with the information in ID documents.</p>
 </div>
 <form class="country-form">
   <div class="input-wr">
@@ -73,7 +73,7 @@
             [ngClass]="{'active': (selectedCountry && selectedLanguage) && !load}"
             (click)="sendStepOne()">
       <span class="btn-text">
-        {{'Verification' | translate}}
+        Verification
       </span>
     </button>
   </div>
