--- a/src/app/popups/notifications-list/top-notification/top-notification.component.scss
+++ b/src/app/popups/notifications-list/top-notification/top-notification.component.scss
@@ -35,6 +35,7 @@
         margin-right: 6px;
       }
       p{
+        word-wrap: break-word;
         padding-top: 2px;
         br{
           display: none;
