--- a/src/app/settings/verification/verification.component.html
+++ b/src/app/settings/verification/verification.component.html
@@ -12,10 +12,10 @@
             <rect x="5.73438" y="16.3984" width="2" height="14.3423" rx="1" transform="rotate(-135 5.73438 16.3984)" fill="white"/>
           </svg>
         </span>
-        <span class="button__text">Level 1 <br>Verification ID Document</span>
+        <span class="button__text">{{'Level' | translate}} 1<br>{{'Verification ID Document' | translate}}</span>
       </button>
       <div class="level-description">
-        <span *ngIf="verificationStatus === NOT_VERIFIED">Пройдите варификацию ID <br>и получи аккаунт Level 1</span>
+        <span *ngIf="verificationStatus === NOT_VERIFIED">{{'Pass ID verification' | translate}} <br>{{'and get a Level 1 account' | translate}}</span>
       </div>
     </div>
     <div class="settings-button-wr">
@@ -28,12 +28,12 @@
             <rect x="5.73438" y="16.3984" width="2" height="14.3423" rx="1" transform="rotate(-135 5.73438 16.3984)" fill="white"/>
           </svg>
         </span>
-        <span class="button__text">Level 2 <br>Utility Bill</span>
+        <span class="button__text">{{'Level' | translate}} 2 <br>{{'Utility Bill' | translate}}</span>
       </button>
       <div class="level-description">
-        <span *ngIf="verificationStatus === NOT_VERIFIED">Доступно после варификации ID</span>
+        <span *ngIf="verificationStatus === NOT_VERIFIED">{{'Available after ID verification' | translate}}</span>
         <!-- когда выполнен степ 1 выводить это описание -->
-         <span class="l2" *ngIf="verificationStatus === LEVEL_ONE">Пройдите варификацию Utility Bill <br>и получи аккаунт Level 2 <br>(доступно после варификации ID)</span>
+         <span class="l2" *ngIf="verificationStatus === LEVEL_ONE">{{'Utility Bill' | translate}}<br>{{'and get a Level 2 account' | translate}} <br>({{'available after ID verification' | translate}})</span>
       </div>
     </div>
   </div>
