--- a/src/app/settings/verification/verification.component.scss
+++ b/src/app/settings/verification/verification.component.scss
@@ -1,54 +1,49 @@
-@media(max-width: 1200px){
-	.id-verification{
-		.settings-button-wr{
-			&:not(:last-child){
-				margin: 0;
-			}
-		}
-	}
-
-	.settings-button-wr{
-		flex-direction: column;
-	}
-	.level-description{
-		position: static;
-		margin-top: 7px;
-		margin-bottom: 15px;
-	}
+@media (max-width: 1200px) {
+  .id-verification {
+    .settings-button-wr {
+      &:not(:last-child) {
+        margin: 0;
+      }
+    }
+  }
+  .settings-button-wr {
+    display: flex;
+    flex-direction: column !important;
+  }
+  .level-description {
+    position: relative;
+    top: 0;
+    margin-top: 7px;
+    margin-bottom: 15px;
+  }
 }
 
-.settings__content{
-	@media(max-width: 568px){
-		padding: 20px 12px 20px;
-	}
-	.settings__content-title{
-		font-size: 20px;
-		line-height: 22px;
-	}
-	.settings__content-subtitle{
-		font-size: 14px;
-		line-height: 16px;
-	}
-	.settings__buttons-row{
-		margin: 0 0 50px 0;
-	}
-	.settings__btn{
-		padding: 5px;
-	}
-	.level-description{
-		span{
-			line-height: 1.2;
-		}
-	} 
+.settings__content {
+  @media (max-width: 568px) {
+    padding: 20px 12px 20px;
+  }
+  .settings__content-title {
+    font-size: 20px;
+    line-height: 22px;
+  }
+  .settings__content-subtitle {
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .settings__buttons-row {
+    margin: 0 0 50px 0;
+  }
+  .level-description {
+    span {
+      line-height: 1.2;
+    }
+  }
 }
-
-
-
 
 // TEMP STYLE
-::ng-deep .mydp{
+::ng-deep .mydp {
   display: flex !important;
-  .selectiongroup{
+  .selectiongroup {
     margin-left: auto !important;
     .selbtngroup {
       width: auto !important;
@@ -70,13 +65,12 @@
   font-size: 10px;
   line-height: 12px;
   z-index: 100;
-  background-color: #191A39;
+  background-color: #191a39;
 }
 
 .filters-popup__datepicker {
   max-width: 455px;
 }
-
 
 .error-message-wr {
   min-height: 25px;
@@ -88,61 +82,57 @@
 
 .wrap-input__message {
   margin: 0 !important;
-  color: #EB5757 !important;
+  color: #eb5757 !important;
 }
 
 .checkbox-error-message-wr {
   margin-bottom: 40px;
   min-height: 25px;
 }
-.formWraper{
+.formWraper {
   max-width: 230px;
   width: 100%;
 }
-.send{
-  &__title{
+.send {
+  &__title {
     text-align: center;
     margin-bottom: 28px;
   }
-  &__inputs-wrap{
+  &__inputs-wrap {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 24px;
-    &.kyc-wr{
+    &.kyc-wr {
       margin-bottom: 0;
       flex-direction: column;
-      app-date-mask-input{
-        width: 100%!important;
-
+      app-date-mask-input {
+        width: 100% !important;
       }
-      .wrap-input__input{
-
+      .wrap-input__input {
         position: relative;
       }
-      .wrap-input{
+      .wrap-input {
         max-width: unset;
         width: 100%;
-        &.send__wrap-input{
+        &.send__wrap-input {
           margin-bottom: 20px;
-
         }
-        input{
+        input {
           max-width: unset;
         }
       }
     }
   }
-  &__select{
+  &__select {
     width: 100%;
     max-width: 230px;
     margin-bottom: 38px;
   }
-  &__wrap-input{
+  &__wrap-input {
     width: 100%;
     max-width: 230px;
     margin-bottom: 24px;
-    .avaliable{
+    .avaliable {
       position: absolute;
       right: 0;
       top: -16px;
@@ -150,136 +140,135 @@
       line-height: 14px;
     }
   }
-  &__line{
+  &__line {
     height: 1px;
-    background-color: #24253F;
+    background-color: #24253f;
   }
-  &__info{
+  &__info {
     margin-top: 28px;
   }
-  &__info-row{
+  &__info-row {
     display: flex;
     margin-bottom: 12px;
-    &:last-child{
+    &:last-child {
       margin-bottom: 24px;
     }
   }
-  &__info-title{
+  &__info-title {
     width: 50%;
     text-align: left;
-    color:#94C2FF;
+    color: #94c2ff;
   }
-  &__info-value{
+  &__info-value {
     width: 47%;
     text-align: right;
     font-weight: bold;
   }
-  &__merchant-comission{
+  &__merchant-comission {
     display: block;
     font-size: 10px;
     line-height: 12px;
   }
 }
-.btn{
-  margin-bottom: 24px;
-  .value{
+.btn {
+  .value {
     display: none;
   }
 }
-.modal__note{
+.modal__note {
   width: calc(100% + 24px);
   left: -12px;
   margin-top: 24px;
 }
-@media (min-width:1200px){
+@media (min-width: 1200px) {
   .send__select {
     max-width: 100% !important;
   }
 
-  .send{
-    &__title{
+  .send {
+    &__title {
       margin-bottom: 32px;
     }
-    &__inputs-wrap{
+    &__inputs-wrap {
       flex-direction: row;
       align-items: flex-start;
       justify-content: space-between;
       margin-bottom: 24px;
     }
-    &__select{
+    &__select {
       width: 100%;
       max-width: calc(50% - 16px);
       margin-bottom: 0;
     }
-    &__wrap-input{
+    &__wrap-input {
       width: 100%;
       max-width: calc(50% - 16px);
       margin-bottom: 0;
     }
-    &__info-row{
+    &__info-row {
       justify-content: space-between;
     }
-    &__info-title{
+    &__info-title {
       width: auto;
       margin-left: 23%;
       //width: calc(50% - 48px);
       //text-align: right;
       margin-right: 32px;
     }
-    &__info-value{
+    &__info-value {
       text-align: left;
     }
-    &__merchant-comission{
+    &__merchant-comission {
       display: inline-block;
       font-size: inherit;
       line-height: inherit;
     }
   }
-  .btn{
+  .btn {
     margin-bottom: 28px;
-    .value{
+    .value {
       display: inline-block;
     }
   }
-  .modal__note{
+  .modal__note {
     width: calc(100% + 64px);
     left: -32px;
     margin-top: 32px;
   }
 }
 .id-verification {
-  .formWraper{
-@media(max-width: 1199px){
+  .formWraper {
+    @media (max-width: 1199px) {
       margin: 0 auto;
     }
   }
-  .settings__buttons-row{
+  .settings__buttons-row {
     flex-direction: row;
-    @media(max-width: 1199px){
+    @media (max-width: 1199px) {
       margin: 0 auto;
+      flex-direction: column;
     }
   }
-  .filters-popup__datepicker{
+  .filters-popup__datepicker {
     margin-right: 0;
   }
-  .settings__buttons-row.checkbox-outher{
+  .settings__buttons-row.checkbox-outher {
     margin-bottom: 22px;
     justify-content: space-between;
     max-width: 230px;
     width: 100%;
-    .balance__hide-zero{
+    .balance__hide-zero {
       margin-left: 0;
       max-width: unset;
       display: flex;
-    align-self: center;
+      align-self: center;
     }
-    .checkbox-wr{
+    .checkbox-wr {
       max-width: unset;
       width: auto;
-
     }
   }
-  .toggler-text{
+  .toggler-text {
     margin-left: 4px;
     display: flex;
     align-items: center;
@@ -298,7 +287,7 @@
 }
 
 .img-h3-wrapper {
-  img{
+  img {
     height: 40px;
     width: 40px;
     float: left;
