--- a/src/app/settings/verification/verification.component.html
+++ b/src/app/settings/verification/verification.component.html
@@ -36,7 +36,48 @@
          <span class="l2" *ngIf="verificationStatus === LEVEL_ONE">Пройдите варификацию Utility Bill <br>и получи аккаунт Level 2 <br>(доступно после варификации ID)</span>
       </div>
     </div>
+
   </div>
+        <div class="public-id">
+    <div class="title-block">
+      <h4>Your Public ID</h4>
+    </div>
+    <div class="id-wr">
+      <div class="id-text">
+        <p>d5ac845ac40cb5d60cd2</p>
+      </div>
+      <div class="copy-button">
+        <button>
+          <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          viewBox="0 0 488.3 488.3" style="enable-background:new 0 0 488.3 488.3;" xml:space="preserve">
+          <g>
+            <g>
+              <path d="M314.25,85.4h-227c-21.3,0-38.6,17.3-38.6,38.6v325.7c0,21.3,17.3,38.6,38.6,38.6h227c21.3,0,38.6-17.3,38.6-38.6V124
+              C352.75,102.7,335.45,85.4,314.25,85.4z M325.75,449.6c0,6.4-5.2,11.6-11.6,11.6h-227c-6.4,0-11.6-5.2-11.6-11.6V124
+              c0-6.4,5.2-11.6,11.6-11.6h227c6.4,0,11.6,5.2,11.6,11.6V449.6z"/>
+              <path d="M401.05,0h-227c-21.3,0-38.6,17.3-38.6,38.6c0,7.5,6,13.5,13.5,13.5s13.5-6,13.5-13.5c0-6.4,5.2-11.6,11.6-11.6h227
+              c6.4,0,11.6,5.2,11.6,11.6v325.7c0,6.4-5.2,11.6-11.6,11.6c-7.5,0-13.5,6-13.5,13.5s6,13.5,13.5,13.5c21.3,0,38.6-17.3,38.6-38.6
+              V38.6C439.65,17.3,422.35,0,401.05,0z"/>
+            </g>
+          </g>
+        </svg>
+        <span>Copy ID</span>
+      </button>
+
+    </div>
+    <!-- copied -->
+    <!-- <div class="copy-button">
+      <button>
+        <svg class="success" width="15" height="11" viewBox="0 0 15 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M1.42383 7.38525L4.16746 9.89641L13.4752 1" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <span class="success-txt">Copied</span>
+      </button>
+    </div> -->
+
+
+  </div>
+</div>
 </div>
 
 
