--- a/src/assets/scss/pages/settings/kyc/_settings-kyc.scss
+++ b/src/assets/scss/pages/settings/kyc/_settings-kyc.scss
@@ -226,3 +226,89 @@
 }
 
 /*--- media end ---*/
+.public-id{
+  max-width: 340px;
+  margin-top: 33px;
+  @media(max-width: 1199px){
+    margin: 33px auto;
+  }
+  .title-block{
+    margin-bottom: 19px;
+    @media(max-width: 1199px){
+    text-align: center;
+  }
+    h4{
+      color: #ffffff;
+      font-size: 14px;
+      font-weight: 400;
+    }
+  }
+  .id-wr{
+    display: flex;
+    align-items: center;
+  }
+  .id-text{
+    margin-right: 17px;
+    border: 1px solid #9cc2fa;
+    border-radius: 4px;
+    padding: 17px;
+    width: 230px;
+    p{
+      color: #d7d7f2;
+      font-size: 14px;
+      font-weight: 400;
+    }
+  }
+  .copy-button{
+    button{
+      background: transparent;
+      border: none;
+      outline: none;
+      display: flex;
+      cursor: pointer;
+      align-items: center;
+      &:hover{
+        span{
+          color:#9cc2fa;
+        }
+        svg{
+
+          path{
+            fill: #9cc2fa;
+          }
+        }
+      }
+      svg{
+        display: block;
+        width:22px;
+        margin-right: 9px;
+        &.success{
+          width: 15px;
+          path{
+            fill: none;
+            stroke: #a0a0a0;
+          }
+        }
+        path{
+          transition: .3s;
+          fill: #397ce7;
+        }
+      }
+      span{
+        transition: .3s;
+        color: #397ce7;
+        font-size: 14px;
+        font-weight: 400;
+        &.success-txt{
+          color: #a0a0a0;
+        }
+      }
+    }
+  }
+}
+
+.id-verification{
+  .settings__form-btn{
+    margin-bottom: 0;
+  }
+}
