--- a/src/assets/scss/pages/ieo/_ieo-test-popup.scss
+++ b/src/assets/scss/pages/ieo/_ieo-test-popup.scss
@@ -1,7 +1,10 @@
 
 .loading-popup {
   .popup {
-    min-height: auto;
+    height: auto;
+    width: 85vw;
+    border-radius: 4px;
+    margin: auto auto;
     .popup__subtitle.tnx-description {
       margin-bottom: 1em;
       padding-top: 1em;
@@ -13,8 +16,11 @@
 }
 
 .sorry-popup {
-  .popup {
-    min-height: auto;
+  .popup {    
+    height: auto;
+    width: 85vw;
+    border-radius: 4px;
+    margin: auto auto;
     .popup__subtitle.tnx-description {
       margin-bottom: 1em;
       padding-top: 1em;
