--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1114,6 +1114,8 @@
     align-items: center;
     svg{
       display: block;
+          width: 100%;
+    max-width: 21px;
     }
 }
 @media(max-width: 1199px){
