--- a/src/app/ieo/components/popup-failed/popup-failed.component.html
+++ b/src/app/ieo/components/popup-failed/popup-failed.component.html
@@ -5,6 +5,11 @@
     <p class="popup__subtitle tnx-description" translate>
       To participate in the ICO {{IEOData.currencyDescription}} Coins <br> Your account must be verified
     </p>
-    <button class="btn btn--active btn--center" routerLink="/settings/verification">{{'Verify account' | translate}} >></button>
+    <button
+      class="btn btn--active btn--center"
+      routerLink="/settings/verification"
+    >
+      {{'Verify account' | translate}} >>
+    </button>
   </div>
 </div>
