DEVEX-2486 added post request

--- a/src/app/popups/notifications-list/top-notification-report/top-notification-report.component.html
+++ b/src/app/popups/notifications-list/top-notification-report/top-notification-report.component.html
@@ -30,7 +30,8 @@
     </button>
   </div>
   <div>
-    <button (click)="action($event)">send report</button>
+    <button (click)="action($event)" *ngIf="!sended">send report</button>
+    <span *ngIf="sended">Posted!</span>
   </div>
 </div>
 
