DEVEX-2546 add settings bank verification, add popup for fiat24 transactions

--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -289,9 +289,9 @@
           [balances]="quberaBalances$ | async"
           [existQuberaAccounts]="existQuberaAccounts"
           [kycStatus]="kycStatus"
-          (transferOut)="goToTransferPopup($event)"
-          (cryptoWithdrawOut)="goToCryptoWithdrawPopup($event)"
-          (cryptoDepositOut)="goToCryptoDepositPopup($event)">
+          (transferQuberaOut)="goToTransferQuberaPopup($event)"
+          (cryptoWithdrawQuberaOut)="goToQuberaWithdrawPopup($event)"
+          (cryptoDepositQuberaOut)="goToQuberaDepositPopup($event)">
         </app-qubera-table>
       </ng-container>
 
@@ -326,4 +326,12 @@
     [optionData]="sendMoneyData"
     (closeSendMoneyPopup)="openSendMoneyPopup(false)"
   ></app-send-money>
+
+  <app-qubera-popup
+    *ngIf="showQuberaPopup"
+    [showPopup]="showQuberaPopup"
+    [optionData]="QuberaData"
+    (closeSendQuberaPopup)="openQuberaPopup(false)"
+  >
+  </app-qubera-popup>
 </div>
