--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -47,6 +47,13 @@
             {{'Api keys' | translate}}
           </a>
         </li>
+        <li class="sidebar-menu__item">
+          <a class="sidebar-menu__link"
+             [routerLinkActive]="['sidebar-menu__link--active']"
+             [routerLink]="['/settings/bank-verification']">
+            {{'Bank verification' | translate}}
+          </a>
+        </li>
         <!-- <li class="sidebar-menu__item">
           <a class="sidebar-menu__link"
              [routerLinkActive]="['sidebar-menu__link--active']"
