--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -1,52 +1,146 @@
 <table class="table qubera-table"
-       *ngIf="kycStatus === KYC_STATUS.SUCCESS && existQuberaAccounts && existQuberaAccounts !== PENDING">
-  <thead>
-    <tr>
-      <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Currency' | translate}}</th>
-      <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Total balance' | translate}}</th>
-      <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Available balance' | translate}}</th>
-      <th class="table__cell-head table__cell-head--tac">{{'Deposit' | translate}}</th>
-      <th class="table__cell-head table__cell-head--tac">{{'Transfer' | translate}}</th>
-      <th class="table__cell-head table__cell-head--tac">{{'Withdraw' | translate}}</th>
-    </tr>
-  </thead>
-  <tbody class="table__body">
-    <tr class="table__row">
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/usd.svg">
-          </div>
-          <span style="min-width: 70px;">USD</span>
-          <span class="balance__currency-name">{{'US Dollar' | translate}}</span>
+*ngIf="kycStatus === KYC_STATUS.SUCCESS && existQuberaAccounts && existQuberaAccounts !== PENDING">
+<thead>
+  <tr>
+    <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Currency' | translate}}</th>
+    <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Total balance' | translate}}</th>
+    <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Available balance' | translate}}</th>
+    <th class="table__cell-head table__cell-head--tac">{{'Deposit' | translate}}</th>
+    <th class="table__cell-head table__cell-head--tac">{{'Transfer' | translate}}</th>
+    <th class="table__cell-head table__cell-head--tac">{{'Withdraw' | translate}}</th>
+  </tr>
+</thead>
+<tbody class="table__body">
+  <tr class="table__row">
+    <td class="table__cell">
+      <div class="balance__currency">
+        <div class="balance__currency-icon">
+          <img src="assets/img/currency-icons/usd.svg">
         </div>
-      </td>
-      <td class="table__cell table__cell--tal">
-        <span>233.92837422</span>
-      </td>
-      <td class="table__cell table__cell--tal">
-        <span>545.23143234</span>
-      </td>
-      <td class="table__cell">
-        <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoDepositOut.emit(true)">{{'Deposit' | translate}}</button>
-      </td>
-      <td class="table__cell">
-        <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="transferOut.emit(true)" >{{'Transfer' | translate}}</button>
-      </td>
-      <td class="table__cell">
-        <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoWithdrawOut.emit(true)">{{'Withdraw' | translate}}</button>
-      </td>
-    </tr>
-      <tr class="table__row balance__table-row" *ngIf="!balances.length">
-        <td class="table__cell table__cell--tac" colspan="10">
-          {{'No matching records found' | translate}}
-        </td>
-      </tr>
-    </tbody>
-  </table>
+        <span style="min-width: 70px;">USD</span>
+        <span class="balance__currency-name">{{'US Dollar' | translate}}</span>
+      </div>
+    </td>
+    <td class="table__cell table__cell--tal">
+      <span>233.92837422</span>
+    </td>
+    <td class="table__cell table__cell--tal">
+      <span>545.23143234</span>
+    </td>
+    <td class="table__cell">
+      <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoDepositOut.emit(true)">{{'Deposit' | translate}}</button>
+    </td>
+    <td class="table__cell">
+      <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="transferOut.emit(true)" >{{'Transfer' | translate}}</button>
+    </td>
+    <td class="table__cell">
+      <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoWithdrawOut.emit(true)">{{'Withdraw' | translate}}</button>
+    </td>
+  </tr>
+  <tr class="table__row balance__table-row" *ngIf="!balances.length">
+    <td class="table__cell table__cell--tac" colspan="10">
+      {{'No matching records found' | translate}}
+    </td>
+  </tr>
+</tbody>
+</table>
 
-  <div class="no-veryfied-qubera" *ngIf="!existQuberaAccounts && existQuberaAccounts !== PENDING">
-    <div class="qubera-icon">
+<div class="no-veryfied-qubera" *ngIf="!existQuberaAccounts && existQuberaAccounts !== PENDING">
+  <div class="qubera-head">
+    <h3>Open account for $20 and get 0% commission <br><span>on outgoing payments in the Singapore Bank</span>
+    </h3>
+  </div>
+
+<!-- если не зареган на fug -->
+
+  <div class="qubera-btn-wr">
+    <button class="btn btn--active balance__title-btn">{{'Open Account' | translate}}</button>
+  </div>
+
+<!-- end 'если не зареган на fug' -->
+
+<!-- если заявка на подтверждении -->
+
+  <div class="wait-block">
+    <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55" viewBox="0 0 55 55" fill="none">
+      <rect x="0.5" y="0.5" width="54" height="54" rx="27" stroke="#237BEF"/>
+      <g>
+        <path d="M31.7428 24.8384C32.528 24.3144 33 23.4328 33 22.4888V18H21V22.4888C21 23.4328 21.472 24.3144 22.2572 24.8384L26.2 27.4668V28.5336L22.2572 31.162C21.472 31.6856 21 32.5672 21 33.5112V38H33V33.5112C33 32.5672 32.528 31.6856 31.7428 31.1616L27.8 28.5332V27.4664L31.7428 24.8384Z" fill="#237BEF"/>
+        <path d="M31.077 23.8405C31.5298 23.5385 31.8002 23.0333 31.8002 22.4897C31.8002 21.9673 31.4446 21.5117 30.9378 21.3849L24.9166 19.8797C23.537 19.5345 22.2002 20.5781 22.2002 22.0005V22.4897C22.2002 23.0333 22.4706 23.5385 22.9234 23.8405L26.6002 26.5389V32.8897C26.6002 34.3417 25.0946 35.3041 23.777 34.6941C23.0674 34.3657 22.2082 34.8517 22.2006 35.6337C22.2006 35.6393 22.2006 35.6445 22.2006 35.6501V38.0005H31.8006V33.5113C31.8006 33.5057 31.8006 33.5005 31.8006 33.4949C31.793 32.7225 31.045 32.1661 30.2842 32.2985L29.4646 32.4413C28.3866 32.6289 27.4002 31.7993 27.4002 30.7057V26.5389L31.077 23.8405Z" fill="#94C2FF"/>
+        <path d="M35 38H19V39.6H35V38Z" fill="#94C2FF"/>
+        <path d="M36.6 39.2001H35.4V37.6001H18.6V39.2001H17.4C17.1792 39.2001 17 39.3789 17 39.6001C17 39.8213 17.1792 40.0001 17.4 40.0001H18.6H19H35H35.4H36.6C36.8208 40.0001 37 39.8213 37 39.6001C37 39.3789 36.8208 39.2001 36.6 39.2001ZM19.4 38.4001H34.6V39.2001H19.4V38.4001Z" fill="#237BEF"/>
+        <path d="M35 16.4001H19V18.0001H35V16.4001Z" fill="#94C2FF"/>
+        <path d="M36.6 16H35.4H35H19H18.6H17.4C17.1792 16 17 16.1788 17 16.4C17 16.6212 17.1792 16.8 17.4 16.8H18.6V18.4H35.4V16.8H36.6C36.8208 16.8 37 16.6212 37 16.4C37 16.1788 36.8208 16 36.6 16ZM34.6 17.6H19.4V16.8H34.6V17.6Z" fill="#237BEF"/>
+      </g>
+      <defs>
+        <clipPath id="clip0">
+          <rect width="24" height="24" fill="white" transform="translate(15 16)"/>
+        </clipPath>
+      </defs>
+    </svg>
+    <span>Заявка KYC на подтверждении</span>
+  </div>
+<!-- end 'если заявка на подтверждении' -->
+
+
+  <div class="qubera-benefits">
+    <div class="ben-head">
+      <h6>Benefits</h6>
+    </div>
+    <ul class="benefits-list">
+      <li>
+        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="11" viewBox="0 0 15 11" fill="none">
+          <rect y="5.53174" width="2.57013" height="7.7104" rx="1" transform="rotate(-45 0 5.53174)" fill="#2560F2"/>
+          <rect x="12.8013" width="2.57013" height="12.9632" rx="1" transform="rotate(45 12.8013 0)" fill="#2560F2"/>
+        </svg>
+        <span><b>Deposits and withdrawals via SWIFT / SEPA for 24 fiat currencies</b></span></li>
+        <li>
+          <svg xmlns="http://www.w3.org/2000/svg" width="15" height="11" viewBox="0 0 15 11" fill="none">
+            <rect y="5.53174" width="2.57013" height="7.7104" rx="1" transform="rotate(-45 0 5.53174)" fill="#2560F2"/>
+            <rect x="12.8013" width="2.57013" height="12.9632" rx="1" transform="rotate(45 12.8013 0)" fill="#2560F2"/>
+          </svg>
+          <span><b>$50,000</b> deposit limit for a day</span></li>
+          <li>
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="11" viewBox="0 0 15 11" fill="none">
+              <rect y="5.53174" width="2.57013" height="7.7104" rx="1" transform="rotate(-45 0 5.53174)" fill="#2560F2"/>
+              <rect x="12.8013" width="2.57013" height="12.9632" rx="1" transform="rotate(45 12.8013 0)" fill="#2560F2"/>
+            </svg>
+            <span><b>$50,000</b> withdrawal limit for a day</span></li>
+            <li>
+              <svg xmlns="http://www.w3.org/2000/svg" width="15" height="11" viewBox="0 0 15 11" fill="none">
+                <rect y="5.53174" width="2.57013" height="7.7104" rx="1" transform="rotate(-45 0 5.53174)" fill="#2560F2"/>
+                <rect x="12.8013" width="2.57013" height="12.9632" rx="1" transform="rotate(45 12.8013 0)" fill="#2560F2"/>
+              </svg>
+              <span>We work with <b>231</b> countries</span></li>
+              <li>
+                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="11" viewBox="0 0 15 11" fill="none">
+                  <rect y="5.53174" width="2.57013" height="7.7104" rx="1" transform="rotate(-45 0 5.53174)" fill="#2560F2"/>
+                  <rect x="12.8013" width="2.57013" height="12.9632" rx="1" transform="rotate(45 12.8013 0)" fill="#2560F2"/>
+                </svg>
+                <span><b>1% commission</b> on account deposits</span></li>
+                <li>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="15" height="11" viewBox="0 0 15 11" fill="none">
+                    <rect y="5.53174" width="2.57013" height="7.7104" rx="1" transform="rotate(-45 0 5.53174)" fill="#2560F2"/>
+                    <rect x="12.8013" width="2.57013" height="12.9632" rx="1" transform="rotate(45 12.8013 0)" fill="#2560F2"/>
+                  </svg>
+                  <span><b>0% transfer fee</b> between personal and trading account at Exrates</span></li>
+                </ul>  
+              </div>
+              <div class="for-vip">
+                <h6>For VIP clients</h6>
+                <p>Up to $ 150,000 limit for deposits and withdrawals.</p>
+              </div>
+              <div class="how-work">
+                <h6>How does it work?</h6>
+                <p>Через ваш акаунт Exrates вы открываете счёт в Банке. Данный счёт является вашим персональным счетом с которого вы можете в любом момент переводить фиат на ваш торговый счёт в Exrates.</p>
+              </div>
+              <div class="detail-inf">
+                <p>Более детальное описание условий доступно на странице финансового партнёра <a href="#">FUG</a>.</p>
+              </div>
+
+
+
+    <!-- <div class="qubera-icon">
       <svg width="24" height="21" viewBox="0 0 24 21" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M4.14605 7.02734H6.0973L6.39013 16.003H3.90234L4.14605 7.02734Z" fill="white"/>
         <path
@@ -65,7 +159,7 @@
     </div>
     <div class="qubera-btn-wr">
       <button class="btn btn--active balance__title-btn">{{'Create Account Qubera' | translate}}</button>
-    </div>
+    </div> -->
     
   </div>
 
@@ -91,6 +185,6 @@
   <!--paginator end-->
 
 
-<div class="loading-container" *ngIf="existQuberaAccounts === PENDING">
-  <app-loader></app-loader>
-</div>
+  <div class="loading-container" *ngIf="existQuberaAccounts === PENDING">
+    <app-loader></app-loader>
+  </div>
