--- a/src/app/funds/balance/qubera-popup/qubera-popup.component.html
+++ b/src/app/funds/balance/qubera-popup/qubera-popup.component.html
@@ -23,6 +23,11 @@
         *ngIf="component == 'DEPOSIT'"
       >
       </app-deposit>
+      
+      <app-deposit
+        *ngIf="component == 'DEPOSIT'"
+      >
+      </app-deposit>
     </div>
   </div>
 </div>
